# vigs_fusion_lc

./: CMakeLists.txt  README.md  frames_2026-03-20_14.26.29.gv  frames_2026-03-20_15.34.51.gv  package.xml
config/: slam_base.yaml
config/datasets/: tum.yaml  vigs.yaml
include/f_vigs_slam/: CudaMathOperations.cuh  FrequencyMask.cuh  GSCudaKernels.cuh  GSSlam.cuh  GSSlamNode.hpp  GSSlamTest.cuh  GaussianSplattingViewer.hpp  ImuCostFunction.hpp  KeyframeSelector.hpp  LocalParameterization.hpp  LoopClosureModule.hpp  LoopClosureModule_ceres_helpers.hpp  MarginalizationFactor.hpp  MetricsHelper.hpp  NetVLADWrapper.hpp  PoseLocalParameterization.hpp  Preintegration.hpp  RepresentationClasses.hpp  RgbdPoseCost.hpp
launch/: gs_slam_launch.py
scripts/: netvlad_hloc_extract.py  netvlad_socket_server.py
src/: FrequencyMask.cu  GSCudaKernels.cu  GSSlam.cu  GSSlamNode.cpp  GaussianSplattingViewer.cpp  ImuCostFunction.cpp  KeyframeSelector.cpp  LoopClosure.cu  LoopClosureModule.cu  LoopClosureModule_GPU_Kernels.cu  LoopClosureModule_ceres_helpers.hpp  LoopClosureOpen3D.cu  MarginalizationFactor.cpp  NetVLADWrapper.cu  PoseLocalParameterization.cpp  Preintegration.cpp  RgbdPoseCost.cu  gs_slam_node.cpp  src.code-workspace
test/: evaluate_metrics.py  test_gs_kernels_base.cu  test_imu_residual.cpp  test_marginalization_factor.cpp  test_normals_kernel_ab.cu  test_rasterization.cpp  test_rgbd_pose_backend_ab.cu
test/reference/: GaussianSplattingSlamKernels_original.cu  GaussianSplattingSlamKernels_original.hpp  GaussianSplattingSlamPoseKernels_original.cu  GaussianSplattingSlamPoseKernels_original.hpp  GaussianSplattingSlamTypes.hpp  ImuCostFunction_original.cpp  ImuCostFunction_original.hpp  MarginalizationFactor_original.cpp  MarginalizationFactor_original.hpp  NormalsKernel_original.cu  NormalsKernel_original.cuh  Preintegration_original.cpp  Preintegration_original.hpp  Utility_original.cpp  Utility_original.hpp
